--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MYSQL_USER=root
 MYSQL_PASSWORD=root
 
 DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost/${MYSQL_DATABASE}
+JWT_SECRET=8MBOHCVS0pEpJUgIoAl76247
