--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,16 +2,26 @@
 name = "axum-patch"
 version = "0.1.0"
 edition = "2021"
+authors = ["Ricardo da Rocha <ricardodarocha@outlook.com>", "Célio Caneschi <caneschi@sistemais.com.br>"]
+description = "Acessa a api do Summer"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.4"
+anyhow = "1.0.79"
+axum = { version = "0.7.4", features = ["macros"] }
+axum-extra = { version = "0.9.2", features = ["typed-header"] }
+base64 = "0.21.7"
+chrono = "0.4.33"
+clap = { version = "4.4.18", features = ["derive"] }
 dotenvy = "0.15.7"
 eyre = "0.6.11"
-serde = "1.0.196"
+jsonwebtoken = "9.2.0"
+once_cell = "1.19.0"
+serde = { version = "1.0.196", features = ["derive"] }
+serde_json = "1.0.113"
 serde_with = "3.5.1"
 sqlx = { version = "0.7.3", features = ["mysql", "time", "runtime-tokio"] }
 thiserror = "1.0.56"
 time = { version = "0.3.31", features = ["serde"] }
-tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
+tokio = { version = "1.35.1", features = ["full", "rt-multi-thread"] }
