correção rota PUT

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-MYSQL_DATABASE=proto
 MYSQL_USER=root
 MYSQL_PASSWORD=root
+MYSQL_DATABASE=proto
 
-DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost/${MYSQL_DATABASE}
+PRODUCAO=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@localhost/${MYSQL_DATABASE}
+HOMOLOGACAO=mysql://root:root@localhost/proto
+
+DATABASE_URL=${PRODUCAO}
 JWT_SECRET=8MBOHCVS0pEpJUgIoAl76247
